Fixed: Footer had wrong height after box-sizing was changed globally

--- a/src/client/less/view.less
+++ b/src/client/less/view.less
@@ -29,7 +29,7 @@ a:hover, a:active {
 }
 
 footer {
-  height: 50px;
+  height: 80px;
   padding-top: 30px;
   border-top: 1px solid #ddd;
   color: #666;
